--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/styles.css">
   </head>
   <body>
-    <div id="app" style="width: 100vw; height: 100vh;"></div>
+    <div id="Dutch-sharepoint" style="width: 100vw; height: 100vh;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
